# SocietySim

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
experiments/: exp1_replication.py  exp2_disease.py
societysim/: agent.py  db.py  grid.py  metrics.py  simulation.py
societysim/llm/: anthropic_client.py  client.py  ollama_client.py  prompts.py
tests/: test_grid.py  test_metrics.py  test_simulation_baseline.py
